# OpenCL

./: .gitignore  LICENSE  README.en.md  README.md  RULES.md
C/: README.md
C/source/: CMakeLists.txt  build.sh
C/source/common/include/: core_errno.h  scl_miniunit.h  uuid.h  uuidp.h
C/source/common/source/: core_errno.c  uuid.c
C/source/datastruct/: CMakeLists.txt
C/source/datastruct/include/: cmap.h  cstr.h  define.h  dscommon.h  scl_deque.h  scl_double_list.h  scl_hashmap.h  scl_queue.h  scl_single_list.h  scl_stack.h  skiplist.h
C/source/datastruct/source/: cmap.c  dscommon.c  scl_deque.c  scl_double_list.c  scl_hashmap.c  scl_queue.c  scl_single_list.c  scl_stack.c  skiplist.c
C/source/memory/: CMakeLists.txt
C/source/memory/include/: c_memcomm.h  c_mempool.h  c_sharemem.h  mempool.h
C/source/memory/source/: c_memcomm.c  c_mempool.c  c_sharemem.c  mempool.c
C/source/strings/include/: scl_cpystrn.h
C/source/strings/source/: scl_cpystrn.c
C/test/: CMakeLists.txt  README.md
C/test/include/: test-mempool.h  test-random.h  test-skiplist.h  testcmap.h  testcommon.h  testlink.h  testqueue.h  teststack.h  testuuid.h
C/test/source/: test-mempool.c  test-random.c  test-skiplist.c  test-uuid.c  testcmap.c  testlink.c  testmain.c  testqueue.c  teststack.c
C/unclassify/: README.md  echo.c  server.c  server2.c
C/unclassify/datastruct/: CMakeLists.txt
C/unclassify/datastruct/include/: hash.h  ini_reader.h
C/unclassify/datastruct/source/: hash.c  ini_reader.c  test_main.c
Cpp/scppl/include/common/: ErrorInfo.h
Cpp/scppl/include/config/: config.h
Cpp/source/: CMakeLists.txt  build.sh
Cpp/source/algorithm/: base64.h
Cpp/source/common/include/: ErrorInfo.h
Cpp/source/common/source/: ErrorInfo.cpp
Cpp/source/config/include/: config.h  config.h.in
Cpp/source/file/include/: CJson.h  IniReaderPlus.h
Cpp/source/file/source/: CJson.c  IniReaderPlus.cpp
Cpp/source/memory/include/: mempool.h  scl_mempool.h  stl_allocater.h
Cpp/source/memory/source/: mempool.cpp  stl_allocater.cpp
Cpp/source/multiprocess/: CMakeLists.txt
Cpp/source/multiprocess/include/: fork.h
Cpp/source/multiprocess/source/: fork.cpp
Cpp/source/test/include/: CJSONTest.h  IniReaderPlusTest.h
Cpp/source/test/source/: BrainTest.cpp  CJSONTest.cpp  IniReaderPlusTest.cpp  testmain.cpp
Cpp/source/unclassify/: DataNode.cpp  DataNode.h  EmmManager-Test.cpp  EmmManager-Test.h  HttpPacker.cpp  HttpPacker.h  HttpRequest.cpp  HttpRequest.h  HttpResponseParse-main.cpp  HttpResponseParse-main.h  HttpResponseParse.cpp  HttpResponseParse.h  TLV.c  TLV.h  TLVPacker.cpp  TLVPacker.h  cfg_reader.cpp  cstr.h  main.cpp  process_check.cpp  process_check.h  rm_dir.c
Cpp/source/xThread/: thread.h  threadpool.cpp  threadpool.h
Cpp/unclassify/: threadpool.c  threadpool.h
Cpp/unclassify/IniReader/: IniReader.cpp  IniReader.h  IniReader.sln  IniReader.vcxproj  IniReader.vcxproj.filters  main.cpp  test.ini  test2.ini
Cpp/unclassify/IniReader/Debug/: IniReader.exe.recipe  IniReader.ilk  IniReader.vcxproj.FileListAbsolute.txt  vc142.idb
Cpp/unclassify/log4cpp-multi-process/: CMakeLists.txt
Cpp/unclassify/log4cpp-multi-process/source/: main.cpp
Module-Test/ModuleTest/: ModuleTest.sln  ModuleTest.vcxproj  ModuleTest.vcxproj.filters  main.cpp
Module-Test/ModuleTest/Debug/: ModuleTest.exe.recipe  ModuleTest.ilk  ModuleTest.vcxproj.FileListAbsolute.txt  vc142.idb
cpp11/test/main/: main.sln
cpp11/test/main/Debug/: main.ilk
cpp11/test/main/main/: main.cpp  main.vcxproj
cpp11/test/main/main/Debug/: vc120.idb
unclassify/: main.c
